[package]
name = "onedrive-rs"
version = "0.1.0"
authors = ["phbai <48466846@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.1"
tokio = { version = "0.2", features = ["full"] }
hyper-tls = "0.4.0"
serde_derive = "1.0.104"
bytes = "0.5.3"
serde = "1.0.104"
serde_json = "1.0.44"
pretty_env_logger = "0.3.1"
futures-util = "0.3.1"